--- a/force-app/main/default/lwc/flightBookingDetails/flightBookingDetails.html
+++ b/force-app/main/default/lwc/flightBookingDetails/flightBookingDetails.html
@@ -476,7 +476,7 @@
     <!-- Conditionally display the spinner -->
     <template if:true={isQuotationSent}>
         <div class="message-box">
-            <span class="message-text">This Quotation is sent for this Booking!</span>
+            <span class="message-text">The Quotation is sent for this Booking!</span>
         </div>
     </template>
     <!-- Conditionally display the spinner -->
