--- a/force-app/main/default/lwc/caseToLead/caseToLead.html
+++ b/force-app/main/default/lwc/caseToLead/caseToLead.html
@@ -1,51 +1,3 @@
 <template>
-
-    <lightning-spinner if:true={isNavigatingToLead} alternative-text="Processing..."></lightning-spinner>
-
-    <!-- <template if:true={openCaseClosedScreen}>
-
-        <lightning-record-edit-form onerror={handleError} record-id={recordId} object-api-name="Case"
-            onsubmit={handleSubmit}>
-            <lightning-messages></lightning-messages>
-            <div class="slds-modal__content slds-p-around_medium">
-                <div class="slds-col slds-size_1-of-1">
-                    <lightning-output-field field-name="Reason_for_Closure_ReadOnly__c" variant="label-stacked">
-                    </lightning-output-field>
-                </div>
-                <div class="slds-col slds-size_1-of-1">
-                    <lightning-input-field field-name="Resolution_Notes__c" value={resolutionNotes} variant="label-stacked">
-                    </lightning-input-field>
-                </div>
-            </div>
-
-            <footer class="slds-text-align_right" style="margin-top: 1rem; padding: 0.5rem 1rem;">
-                <lightning-button class="slds-m-left_small" variant="brand" type="submit" name="update" label="Save">
-                </lightning-button>
-            </footer>
-        </lightning-record-edit-form>
-
-    </template> -->
-
-    <!-- <template if:true={isShowAction}>
-        <lightning-card>
-            <div class="slds-p-around_medium">
-                <div class="slds-text-align_center slds-text-heading_medium">
-                    <template if:true={isSuccess}>
-                        <lightning-icon icon-name="action:approval" size="large" alternative-text="Success"
-                            class="slds-m-bottom_small">
-                        </lightning-icon>
-                        <div class="message-container" lwc:dom="manual"></div>
-                    </template>
-                    <template if:false={isSuccess}>
-                        <lightning-icon icon-name="action:close" size="large" alternative-text="Error"
-                            class="slds-m-bottom_small">
-                        </lightning-icon>
-                        <p>
-                            <strong>{actionMessage}</strong>
-                        </p>
-                    </template>
-                </div>
-            </div>
-        </lightning-card>
-    </template> -->
+    <lightning-spinner if:true={isLoading} size="large" alternative-text="Loading..."></lightning-spinner>
 </template>
