--- a/force-app/main/default/lwc/cancelBooking/cancelBooking.html
+++ b/force-app/main/default/lwc/cancelBooking/cancelBooking.html
@@ -7,9 +7,9 @@
     </div>
     
     <template if:true={isModalOpen}>
+        <!-- Footer Section 
         <section role="dialog" tabindex="-1" class="slds-modal slds-fade-in-open">
             <div class="slds-modal__container">
-                <!-- Modal/Confirmation Header -->
                 <header class="slds-modal__header">
                     <button class="slds-button slds-button_icon slds-modal__close slds-button_icon-inverse"
                             title="Close" onclick={closeModal}>
@@ -19,7 +19,6 @@
                     <h2 class="slds-text-heading_medium">Cancel Booking</h2>
                 </header>
                 <template if:false={showNoBooking}>
-                    <!-- Modal Body -->
                 <div class="slds-modal__content slds-p-around_medium">
                     <lightning-radio-group
                         name="cancelOptions"
@@ -29,25 +28,50 @@
                         onchange={handleCancelOptionChange}
                     ></lightning-radio-group>
                 </div>
-
-                <!-- Modal Footer -->
                 <footer class="slds-modal__footer">
                     <lightning-button variant="neutral" label="Cancel" onclick={closeModal} style="margin-right: 10px;"></lightning-button>
                     <lightning-button variant="brand" label="Next" onclick={handleNext}></lightning-button>
                 </footer>
                 </template>
                 <template if:true={showNoBooking}>
-                    <!-- Modal Body -->
             <div class="slds-modal__content slds-p-around_medium">
                 <p>No booking available for cancellation</p>
             </div>
                 </template>
                 
             </div>
-        </section>
-
-        <!-- Backdrop for Modal -->
+        </section> 
         <div class="slds-backdrop slds-backdrop_open"></div>
+        -->
+        <lightning-card>
+            <!-- Header Section -->
+            <header class="slds-modal__header">
+                <h2 class="slds-text-heading_medium">Cancel Booking</h2>
+            </header>
+            <template if:false={showNoBooking}>
+                <div class="slds-p-around_medium">
+                    <div class="slds-modal__content slds-p-around_medium">
+                        <lightning-radio-group
+                        name="cancelOptions"
+                        label="Select Cancel Type"
+                        options={cancelOptions}
+                        value={selectedCancelOption}
+                        onchange={handleCancelOptionChange}>
+                        </lightning-radio-group>
+                    </div>
+                </div>
+                <!-- Footer Section -->
+                <footer class="slds-modal__footer">
+                    <lightning-button variant="neutral" label="Cancel" onclick={closeModal} style="margin-right: 10px;"></lightning-button>
+                    <lightning-button variant="brand" label="Next" onclick={handleNext}></lightning-button>
+                </footer>
+            </template>
+            <template if:true={showNoBooking}>
+                <div class="slds-modal__content slds-p-around_medium">
+                    <p>No booking available for cancellation</p>
+                </div>
+            </template>
+        </lightning-card>
     </template>
 
     <template if:true={showMultipleCancelScreen}>
