--- a/force-app/main/default/lwc/flightBookingPreview/flightBookingPreview.html
+++ b/force-app/main/default/lwc/flightBookingPreview/flightBookingPreview.html
@@ -73,9 +73,17 @@
                         </div>
                     </lightning-layout-item>
                 </lightning-layout>
-                <div class="slds-align_absolute-center slds-m-top_medium">
-                    <lightning-button class="encalmbg" label="Next" variant="brand" onclick={handleSave}></lightning-button>
-                </div>
+                <template if:false={editing}>
+                    <footer class="slds-align_absolute-center slds-m-top_medium">
+                        <lightning-button class="encalmbg" label="Next" variant="brand" onclick={handleSave}></lightning-button>
+                    </footer>
+                </template>
+                <template if:true={editing}>
+                    <footer class="slds-modal__footer">
+                    <lightning-button label="Cancel" class="encalmbg" variant="brand" onclick={openModal} style="margin-right: 10px;"></lightning-button>
+                    <lightning-button class="encalmbg" label="Next" variant="brand" onclick={handleSave}></lightning-button></lightning-button>
+                    </footer>
+                </template>
         </lightning-card>
     </template>
     <!-- Departure -->
@@ -151,9 +159,17 @@
                 </div>
             </lightning-layout-item>
         </lightning-layout>
-        <div class="slds-align_absolute-center slds-m-top_medium">
-            <lightning-button label="Next" class="encalmbg" variant="brand" onclick={handleSave}></lightning-button>
-        </div>
+        <template if:false={editing}>
+            <footer class="slds-align_absolute-center slds-m-top_medium">
+                <lightning-button class="encalmbg" label="Next" variant="brand" onclick={handleSave}></lightning-button>
+            </footer>
+        </template>
+        <template if:true={editing}>
+            <footer class="slds-modal__footer">
+            <lightning-button label="Cancel" class="encalmbg" variant="brand" onclick={openModal} style="margin-right: 10px;"></lightning-button>
+            <lightning-button class="encalmbg" label="Next" variant="brand" onclick={handleSave}></lightning-button></lightning-button>
+            </footer>
+        </template>
         </lightning-card>
     </template>
     <!-- Transit -->
@@ -245,11 +261,49 @@
                         </div>
                     </lightning-layout-item>
                 </lightning-layout>
-                <div class="slds-align_absolute-center slds-m-top_medium">
-                    <lightning-button label="Next" class="encalmbg" variant="brand" onclick={handleSave}></lightning-button>
-                </div>
+                <template if:false={editing}>
+                    <footer class="slds-align_absolute-center slds-m-top_medium">
+                        <lightning-button class="encalmbg" label="Next" variant="brand" onclick={handleSave}></lightning-button>
+                    </footer>
+                </template>
+                <template if:true={editing}>
+                    <footer class="slds-modal__footer">
+                    <lightning-button label="Cancel" class="encalmbg" variant="brand" onclick={openModal} style="margin-right: 10px;"></lightning-button>
+                    <lightning-button class="encalmbg" label="Next" variant="brand" onclick={handleSave}></lightning-button></lightning-button>
+                    </footer>
+                </template>
 
         
         </lightning-card>
+    </template>
+    <!-- Modal for confirmation -->
+    <template if:true={isModalOpen}>
+        <section role="dialog" tabindex="-1" class="slds-modal slds-fade-in-open">
+            <div class="slds-modal__container">
+                <!-- Modal/Confirmation Header -->
+                <header class="slds-modal__header">
+                    <button class="slds-button slds-button_icon slds-modal__close slds-button_icon-inverse"
+                            title="Close" onclick={closePopupModal}>
+                        <lightning-icon icon-name="utility:close" size="small" alternative-text="close" class="slds-button__icon slds-button__icon_small"></lightning-icon>
+                        <span class="slds-assistive-text">Close</span>
+                    </button>
+                    <h2 class="slds-text-heading_medium">Cancel Update</h2>
+                </header>
+
+                <!-- Modal Body -->
+                <div class="slds-modal__content slds-p-around_medium">
+                    <p>Are you sure you want to Cancel the updates?</p>
+                </div>
+
+                <!-- Modal Footer -->
+                <footer class="slds-modal__footer">
+                    <lightning-button variant="neutral" label="No" class="encalmbg" onclick={closePopupModal}></lightning-button>
+                    <lightning-button variant="brand" label="Yes" class="encalmbg" onclick={handleRedirect}></lightning-button>
+                </footer>
+            </div>
+        </section>
+
+        <!-- Backdrop for Modal -->
+        <div class="slds-backdrop slds-backdrop_open"></div>
     </template>
 </template>
