--- a/force-app/main/default/lwc/genericTATTimer/genericTATTimer.html
+++ b/force-app/main/default/lwc/genericTATTimer/genericTATTimer.html
@@ -1,7 +1,9 @@
 <!-- tatTimer.html -->
 <template>
-    <div class="slds-box slds-theme_alert-texture">
-         <strong>Escalation Level:</strong> {escalationLevel}</br>
-        <strong>TAT Timer:</strong> {remaining}
-    </div>
+    <template if:false={hideTat}>
+        <div class="slds-box slds-theme_alert-texture">
+            <strong>Escalation Level:</strong> {escalationLevel}</br>
+            <strong>TAT Timer:</strong> {remaining}
+        </div>
+    </template>
 </template>
